# datapeek

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  todo.txt
docs/: OUTLINE.md  SPEC.md  new_command.md  publish.md  test_drive.md
sleepydatapeek/: __init__.py  main.py
sleepydatapeek/cli/: __init__.py
sleepydatapeek/cli/commands/: __init__.py  report.py  summary.py
sleepydatapeek/core/: __init__.py  config.py  inspectors.py  logging.py  reporting.py  sleepy_params.py
sleepydatapeek/utils/: __init__.py  clipboard.py  formatting.py
sleepydatapeek_toolchain/: utils.py
tests/: conftest.py
tests/cli/: test_report.py  test_summary.py
tests/core/: test_config.py  test_sleepy_params.py
tools/: format.sh  test.sh
