[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sleepydatapeek"
version = "2.0.0"
description = "Peek at local datafiles fast!"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["pandas", "data", "analysis", "cli"]
authors = [{ name = "Isaac Yep", email = "anthonybenchyep@gmail.com" }]
dependencies = [
  "markdown>=3.5",
  "matplotlib>=3.8.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pillow>=10.2.0",
  "pyarrow>=15.0.0",
  "pypdf>=4.1.0",
  "pyyaml>=6.0",
  "seaborn>=0.13.0",
  "tabulate>=0.9.0",
  "typer>=0.12.0",
  "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
  "shfmt-py>=3.7.0.1",
]

[project.urls]
repository = "https://github.com/anthonybench/datapeek"

[project.scripts]
sleepydatapeek = "sleepydatapeek.main:main"

[tool.poetry]
packages = [{ include = "sleepydatapeek" }]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
